<resources>
    <string name="app_name">SelfUpdateRoutine</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- メニュー -->
    <string name="menu_home">ホーム</string>
    <string name="menu_setting">設定</string>
    <string name="menu_remember">詳細</string>
    <string name="menu_account">アカウント</string>
    <string name="menu_mission_statement_list">ミッションステートメント</string>
    <string name="menu_mission_statement_setting">ミッションステートメント編集</string>
    <string name="menu_constitution_statement_list">宣言</string>
    <string name="menu_constitution_learn_list">格言</string>

    <!-- セクション -->
    <string name="title_report_ffs">４行日記</string>
    <string name="title_report_emotions">感情日記</string>
    <string name="section1_1">Q1</string>
    <string name="section1_2">Q2</string>
    <string name="section1_3">Q3</string>
    <string name="section1_4">Q4</string>
    <string name="section2_1">Q5</string>
    <string name="section2_2">Q6</string>
    <string name="section2_3">Q7</string>

    <!-- タイトル -->
    <string name="title_item_short_fact">【事実】</string>
    <string name="title_item_short_find">【発見】</string>
    <string name="title_item_short_learn">【教訓】</string>
    <string name="title_item_short_ffs_result">【FFS確認】</string>
    <string name="title_item_short_statement">【宣言】</string>
    <string name="title_item_short_assessment">【天気】</string>
    <string name="title_item_short_reason">【理由】</string>
    <string name="title_item_short_improve">【改善】</string>
    <string name="title_item_short_wather_result">【PDCA確認】</string>
    <string name="title_item_fact">【事実】\n何がありましたか？</string>
    <string name="title_item_find">【発見】\nどんな気づきがありましたか？</string>
    <string name="title_item_learn">【格言】\nどんな学びがありましたか？</string>
    <string name="title_item_declaration">【宣言】\nこれらに基づいてどんな人間ですか？</string>
    <string name="title_item_assessment">【評価】\n今日はどんな天気でしたか？</string>
    <string name="title_item_reason">【理由】\nそれは何故ですか？</string>
    <string name="title_item_action">【改善】\nどうしたら明日はもっと天気がよくなりますか？</string>
    <string name="title_answer_check">下記の内容でよろしいでしょうか？</string>
    <string name="title_daly_card">今日の振り返り</string>
    <string name="title_item_alarm_time">アラーム時間</string>
    <string name="title_item_alarm_mode">アラームモード</string>
    <string name="title_item_next_alarm">次回のアラーム時間</string>
    <string name="title_daily_mission">今日の目標</string>
    <string name="title_report_list">日記一覧</string>
    <string name="title_home_head">内省化補正日記</string>
    <string name="title_home_sub">未来へ向けた</string>

    <!-- ヒント文言 -->
    <string name="hint_item_fact">例）綺麗な夕焼けを見た</string>
    <string name="hint_item_find">例）出会いは意識と運がもたらす</string>
    <string name="hint_item_learn">例）運は自ら引き寄せるものだ</string>
    <string name="hint_item_statement">例）私は、大望をかなえている野心家です</string>
    <string name="hint_item_reason">例）なかなかタスクが進まなかった</string>
    <string name="hint_item_improve">例）優先順位を考える</string>
    <string name="hint_funeral">例）弔辞：あなたがいたからこの道を見つけることができた</string>
    <string name="hint_purpose_life">例）ワクワクで溢れる人生を提供すること</string>
    <string name="hint_constitution">例）弱い人の見方であること</string>

    <!-- サブタイトル -->
    <string name="title_sub_setting">変更前の時間</string>
    <string name="title_sub_dai">理想の葬儀</string>
    <string name="title_sub_mission_statement">人生の目的</string>
    <string name="title_sub_constitution">憲法</string>
    <string name="title_sub_email">メールアドレス</string>
    <string name="title_sub_email_confirm">メールアドレス（確認用）</string>
    <string name="title_sub_password">パスワード</string>
    <string name="title_sub_password_confirm">パスワード（確認用）</string>

    <!-- その他 -->
    <string name="txt_time_punctuation">：</string>
    <string name="list_disc">・</string>

    <!-- 説明 -->
    <string name="question_fact">何がありましたか？</string>
    <string name="question_find">どんな気づきがありましたか？</string>
    <string name="question_learn">どんな学びがありましたか？</string>
    <string name="question_statement">これらに基づいてどんな人間ですか？</string>
    <string name="question_assessment">今日はどんな天気でしたか？</string>
    <string name="question_reason">それは何故ですか？</string>
    <string name="question_improve">どうしたら明日は晴れますか？</string>
    <string name="explanation_alarm_mode_normal">予定時刻に１回だけ通知されます</string>
    <string name="explanation_alarm_mode_hard">予定時刻を過ると繰り返し通知されます</string>

    <!-- 天気の種類 -->
    <string name="weather_rain">雨</string>
    <string name="weather_rain_and_cloudy">雨時々曇り</string>
    <string name="weather_cloudy">曇り</string>
    <string name="weather_cloudy_and_sunny">曇り時々晴れ</string>
    <string name="weather_sunny">晴れ</string>

    <!-- ボタン -->
    <string name="btn_ok">確定</string>
    <string name="btn_edit">編集</string>
    <string name="btn_update">更新</string>
    <string name="btn_next">次へ</string>
    <string name="bth_daly_input">日記入力へ</string>
    <string name="btn_plus">＋</string>
    <string name="btn_minus">ー</string>

    <!-- 認証系機能 -->
    <string name="btn_sign_in">ログイン</string>
    <string name="btn_sign_out">ログアウト</string>
    <string name="btn_sign_up">アカウント作成</string>
    <string name="btn_account_delete">アカウント削除</string>

    <!-- ラジオボタン -->
    <string name="radio_btn_daly_diary">今日の日記</string>
    <string name="radio_btn_alarm_mode_normal">中</string>
    <string name="radio_btn_alarm_mode_hard">高</string>

    <string name="txt_no_daly_diary">今日の日記が入力されていません。</string>
    <string name="txt_no_mission_statement">ミッションステートメントが登録されていません。</string>
    <string name="txt_no_report_list">日記がまだ登録されていません。</string>

</resources>