<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="com.myapp.presentation.ui.diary.FfsResultViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txt_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/title_answer_check"
            android:textColor="@color/text_color_dark_primary"
            android:textSize="@dimen/title_text"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_section1_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/section1_1"
            android:textColor="@color/text_color_dark_primary"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_header" />

        <TextView
            android:id="@+id/txt_question1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/question_fact"
            android:textColor="@color/text_color_dark_primary"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/txt_section1_1"
            app:layout_constraintTop_toTopOf="@+id/txt_section1_1" />

        <TextView
            android:id="@+id/txt_answer1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@{viewModel.factInputText}"
            app:layout_constraintStart_toStartOf="@+id/txt_section1_1"
            app:layout_constraintTop_toBottomOf="@+id/txt_section1_1" />

        <TextView
            android:id="@+id/txt_section1_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/section1_2"
            android:textColor="@color/text_color_dark_primary"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/txt_answer1"
            app:layout_constraintTop_toBottomOf="@+id/txt_answer1" />

        <TextView
            android:id="@+id/txt_question2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/question_find"
            android:textColor="@color/text_color_dark_primary"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/txt_section1_2"
            app:layout_constraintTop_toTopOf="@+id/txt_section1_2" />

        <TextView
            android:id="@+id/txt_answer2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@{viewModel.findInputText}"
            app:layout_constraintStart_toStartOf="@+id/txt_section1_2"
            app:layout_constraintTop_toBottomOf="@+id/txt_section1_2" />

        <TextView
            android:id="@+id/txt_section1_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/section1_3"
            android:textColor="@color/text_color_dark_primary"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/txt_answer2"
            app:layout_constraintTop_toBottomOf="@+id/txt_answer2" />

        <TextView
            android:id="@+id/txt_question3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/question_learn"
            android:textColor="@color/text_color_dark_primary"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/txt_section1_3"
            app:layout_constraintTop_toTopOf="@+id/txt_section1_3" />

        <TextView
            android:id="@+id/txt_answer3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@{viewModel.learnInputText}"
            app:layout_constraintStart_toStartOf="@+id/txt_section1_3"
            app:layout_constraintTop_toBottomOf="@+id/txt_section1_3" />

        <TextView
            android:id="@+id/txt_section1_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/section1_4"
            android:textColor="@color/text_color_dark_primary"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/txt_answer3"
            app:layout_constraintTop_toBottomOf="@+id/txt_answer3" />

        <TextView
            android:id="@+id/txt_question4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/question_statement"
            android:textColor="@color/text_color_dark_primary"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/txt_section1_4"
            app:layout_constraintTop_toTopOf="@+id/txt_section1_4" />

        <TextView
            android:id="@+id/txt_answer4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@{viewModel.statementInputText}"
            app:layout_constraintStart_toStartOf="@+id/txt_section1_4"
            app:layout_constraintTop_toBottomOf="@+id/txt_section1_4" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/btn_ok"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_answer4" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>