<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="com.myapp.presentation.ui.diary.WeatherResultViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txt_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/title_answer_check"
            android:textColor="@color/text_color_dark_primary"
            android:textSize="@dimen/title_text"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_section2_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/section2_1"
            android:textColor="@color/text_color_dark_primary"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_header" />

        <TextView
            android:id="@+id/txt_question5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/question_assessment"
            android:textColor="@color/text_color_dark_primary"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/txt_section2_1"
            app:layout_constraintTop_toTopOf="@+id/txt_section2_1" />

        <TextView
            android:id="@+id/txt_answer5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@{viewModel.assessmentInputText}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/txt_section2_1"
            app:layout_constraintTop_toBottomOf="@+id/txt_section2_1" />

        <TextView
            android:id="@+id/txt_section2_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/section2_2"
            android:textColor="@color/text_color_dark_primary"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/txt_answer5"
            app:layout_constraintTop_toBottomOf="@+id/txt_answer5" />

        <TextView
            android:id="@+id/txt_question6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/question_reason"
            android:textColor="@color/text_color_dark_primary"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/txt_section2_2"
            app:layout_constraintTop_toTopOf="@+id/txt_section2_2" />

        <TextView
            android:id="@+id/txt_answer6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@{viewModel.reasonInputText}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/txt_section2_2"
            app:layout_constraintTop_toBottomOf="@+id/txt_section2_2" />

        <TextView
            android:id="@+id/txt_section2_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/section2_3"
            android:textColor="@color/text_color_dark_primary"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/txt_answer6"
            app:layout_constraintTop_toBottomOf="@+id/txt_answer6" />

        <TextView
            android:id="@+id/txt_question7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/question_improve"
            android:textColor="@color/text_color_dark_primary"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/txt_section2_3"
            app:layout_constraintTop_toTopOf="@+id/txt_section2_3" />

        <TextView
            android:id="@+id/txt_answer7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@{viewModel.improveInputText}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/txt_section2_3"
            app:layout_constraintTop_toBottomOf="@+id/txt_section2_3" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btn_ok"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>