<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="com.myapp.domain.model.value.AlarmMode" />

        <variable
            name="viewModel"
            type="com.myapp.presentation.ui.mission_statement.MissionStatementSettingViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txt_title_funeral"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/title_sub_dai"
            android:textColor="@color/text_color_dark_primary"
            android:textSize="@dimen/title_text"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_funeral"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:overScrollMode="never"
            app:layout_constraintEnd_toEndOf="@+id/txt_title_funeral"
            app:layout_constraintStart_toStartOf="@+id/txt_title_funeral"
            app:layout_constraintTop_toBottomOf="@+id/txt_title_funeral" />

        <TextView
            android:id="@+id/txt_title_mission_statement"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/title_sub_mission_statement"
            android:textColor="@color/text_color_dark_primary"
            android:textSize="@dimen/title_text"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="@+id/list_funeral"
            app:layout_constraintStart_toStartOf="@+id/list_funeral"
            app:layout_constraintTop_toBottomOf="@+id/list_funeral" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_value_mission_statement"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/txt_title_mission_statement"
            app:layout_constraintStart_toStartOf="@+id/txt_title_mission_statement"
            app:layout_constraintTop_toBottomOf="@+id/txt_title_mission_statement">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_purpose_life"
                android:inputType="textEmailAddress"
                android:text="@={viewModel.purposeLife}" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/txt_title_constitution"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/title_sub_constitution"
            android:textColor="@color/text_color_dark_primary"
            android:textSize="@dimen/title_text"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="@+id/txt_value_mission_statement"
            app:layout_constraintStart_toStartOf="@+id/txt_value_mission_statement"
            app:layout_constraintTop_toBottomOf="@+id/txt_value_mission_statement" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_constitution"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:overScrollMode="never"
            app:layout_constraintEnd_toEndOf="@+id/txt_title_constitution"
            app:layout_constraintStart_toStartOf="@+id/txt_title_constitution"
            app:layout_constraintTop_toBottomOf="@+id/txt_title_constitution" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/btn_update"
            android:enabled="@{viewModel.isEnableConfirmButton() }"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/list_constitution" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>